[gd_scene load_steps=4 format=2]

[ext_resource path="res://game_ui/Btn03.png" type="Texture" id=1]
[ext_resource path="res://game_ui/Btn07.png" type="Texture" id=2]
[ext_resource path="res://game_menu.gd" type="Script" id=3]

[node name="game_menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Level_01_btn" type="TouchScreenButton" parent="."]
position = Vector2( 120.208, 298.399 )
normal = ExtResource( 1 )

[node name="Level_02_btn" type="TouchScreenButton" parent="."]
position = Vector2( 302.642, 301.227 )
normal = ExtResource( 1 )

[node name="Level_03_btn" type="TouchScreenButton" parent="."]
position = Vector2( 472.347, 301.227 )
normal = ExtResource( 1 )

[node name="Exit_button" type="TouchScreenButton" parent="."]
position = Vector2( 1144.1, 11.3137 )
normal = ExtResource( 2 )

[connection signal="pressed" from="Level_01_btn" to="." method="_on_Level_01_btn_pressed"]
[connection signal="pressed" from="Level_02_btn" to="." method="_on_Level_02_btn_pressed"]
[connection signal="pressed" from="Level_03_btn" to="." method="_on_Level_03_btn_pressed"]
[connection signal="pressed" from="Exit_button" to="." method="_on_Exit_button_pressed"]
